--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -72,7 +72,7 @@
       display: inline-block;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
-  background: rgba(255,255,255,0.25);
+  background: #058B8C;
   color: #fff;
   border: 1px solid rgba(255,255,255,0.5);
   border-radius: 0.5rem;
@@ -81,7 +81,7 @@
   transition: background 0.3s, transform 0.2s;
     }
     .hero__content .btn:hover {
-       background: rgba(255,255,255,0.35);
+       background: rgba(255, 255, 255, 0.505);
     transform: translateY(-2px);
     }
 
